setup key dan config netlify

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,3 +26,10 @@ jobs:
       with:
         github_token: ${{ secrets.GIT_TOKEN }}
         publish_dir: ./public
+
+    - name: Setup Environment Variables
+      run: echo "REACT_APP_GITHUB_CLIENT_ID=${{ secrets.Client_ID }}" >> $GITHUB_ENV
+      run: echo "REACT_APP_GITHUB_CLIENT_SECRET=${{ secrets.Client_secret }}" >> $GITHUB_ENV
+
+
+
