--- a/hugo.toml
+++ b/hugo.toml
@@ -3,5 +3,10 @@ languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = "ananke"
 
+backend:
+  name: github
+  repo: adpit/arie_digital  # Ubah sesuai dengan repo Anda
+  base_url: https://api.netlify.com/auth/done
+
 [permalinks]
   posts = "/:year/:month/:day/:slug"
