fix config hugo dengan kutip dan tambah rebuild.sh

--- a/hugo.toml
+++ b/hugo.toml
@@ -4,9 +4,12 @@ title = 'My New Hugo Site'
 theme = "ananke"
 
 backend:
-  name: github
-  repo: adpit/arie_digital  # Ubah sesuai dengan repo Anda
-  base_url: https://api.netlify.com/auth/done
+  name = "github"
+  repo = "adpit/arie_digital"  # Ubah sesuai dengan repo Anda
+  base_url = "https://api.netlify.com/auth/done"
 
 [permalinks]
   posts = "/:year/:month/:day/:slug"
+
+
+
