--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,17 @@ jobs:
       run: cat config/_default/config.toml
 
     - name: Build
-      run: hugo --minify
+      run: |
+        hugo --minify 2>&1 | tee build.log
+        if [ ${PIPESTATUS[0]} -ne 0 ]; then
+          echo "::error::Hugo build failed, check build.log for details"
+        fi
+
+    - name: Display Warnings
+      run: |
+        if [ -f build.log ]; then
+          cat build.log | grep "WARNING" || true
+        fi
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
