--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,5 @@ jobs:
           publish_dir: ./public
           user_name: adpit
           user_email: adpit31@gmail.com
-          publish_branch: main
+          publish_branch: gh-pages # Perubahan dilakukan di sini, mengganti "main" menjadi "gh-pages"
           keep_files: true
